2010-09-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h:
	* GSLinkedList.m: Simple doubly linked list implementation
	* GSThreadPool.h:
	* GSThreadPool.m: Lightweight thread pool implementation
	* Performance.h: Include new headers
	* GNUmakefile: Build/install new source
	Add classes for a simple linked list and for a lightweight thread 
	pool for rapid handoff of operations to other threads.

2008-12-12 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSSkipMutableArray.m: Fix uninitialised variable.

2008-05-30 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThroughput.h:
	* GSThroughput.m:
	Add support for sending a notification of stats for the last minute
	so that rates by the minute can be logged.

2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Improve handling of case when delegate asks for an item to be kept...
	changes the delegat callback methoid to include lifetime information.
	Make the cache thread-safe.

2008-01-31 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Make cache keys 'id' rather than 'NSString*' as they can actually be
	any copyable object.

2007-12-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: bump subminor version for release
	* GSThroughput.m: ([-description]) output information for periods
	from last cycle as well as current cycle.

2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Update to LGPL3

2007-05-30  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSTicker.m: Ensure tick is current before calling -newSecond:

2007-04-01  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m:
	* GSThroughput.m:
	* GSSkipMutableArray.m:
	* GSTicker.m:
	Changes to avoid compiler warnings on MacOS-X
	Improvements to calculations for size of instances for cache.

2006-11-11  Matt Rice <ratmice@gmail.com>

	* GSMutableSkipArray.m: Fix bug when deallocating an empty list.

2006-11-11  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThroughput.h: New ([add:duration:]) method.